--- a/lib/plate_slate_web/templates/layout/root.html.heex
+++ b/lib/plate_slate_web/templates/layout/root.html.heex
@@ -19,6 +19,12 @@
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
           </ul>
+          <%= if @conn.assigns[:current_user] do %>
+            <li><%= link "Logout", to: Routes.session_path(@conn, :delete),
+                    method: :delete,
+                    class: "btn btn-danger btn-xs" %>
+            </li>
+          <% end %>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
           <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
